plugins in wizard init

--- a/core/app/assets/styles/app-imports.scss
+++ b/core/app/assets/styles/app-imports.scss
@@ -37,8 +37,8 @@
 @import "../../modules/import-export/assets/js/pages/import/import-resolver/import-resolver.scss";
 @import "../../modules/import-export/assets/js/ui/panel/panel.scss";
 @import "../../modules/import-export/assets/js/pages/export/export-kit/export-kit.scss";
+@import "../../modules/import-export/assets/js/pages/import/import-plugins/import-plugins.scss";
 @import "../../modules/import-export/assets/js/shared/info-modal/info-modal.scss";
-
 // Kit library
 @import "../../modules/kit-library/assets/js/components/badge.scss";
 @import "../../modules/kit-library/assets/js/components/collapse.scss";
@@ -60,3 +60,4 @@
 @import "../../modules/kit-library/assets/js/pages/preview/preview-responsive-controls.scss";
 @import "../../modules/kit-library/assets/js/pages/preview/preview.scss";
 @import "../js/molecules/collapse.scss";
+
