Working on export plugins page

--- a/core/app/assets/styles/app-imports.scss
+++ b/core/app/assets/styles/app-imports.scss
@@ -6,6 +6,7 @@
 @import "../../modules/site-editor/assets/scss/loading.scss";
 @import "../../modules/site-editor/assets/js/organisms/menu.scss";
 @import "../../modules/import-export/assets/js/pages/import/import-kit/import-kit.scss";
+@import "../../modules/import-export/assets/js/pages/export/export-plugins/export-plugins.scss";
 @import "../../modules/site-editor/assets/js/pages/promotion.scss";
 @import "../../modules/import-export/assets/js/ui/wizard-step/wizard-step.scss";
 @import "../../modules/import-export/assets/js/ui/page-header/page-header.scss";
