--- a/core/app/modules/import-export/assets/js/shared/kit-content/components/plugin-list-item/plugin-list-item.scss
+++ b/core/app/modules/import-export/assets/js/shared/kit-content/components/plugin-list-item/plugin-list-item.scss
@@ -17,7 +17,10 @@ $root: e-app-plugins-content;
 	text-align: left;
   }
 
+  &__status {
+
+  }
   &__version {
-	text-align: right;
+	color: $eps-theme-info
   }
 }
