--- a/core/app/assets/js/ui/molecules/column-list-item.scss
+++ b/core/app/assets/js/ui/molecules/column-list-item.scss
@@ -1,4 +1,9 @@
 .e-app-column-list-item {
   display: flex;
   justify-content: space-between;
+
+  &__row {
+	display: flex;
+	align-items: center;
+  }
 }
