--- a/modules/onboarding/assets/scss/onborading.scss
+++ b/modules/onboarding/assets/scss/onborading.scss
@@ -1,4 +1,50 @@
-.xyz {
+#e-onboarding-root {
+  display: flex;
+  height: 690px;
+  width: 100%;
+  align-items: center;
+}
 
-  background-color: #00ab6b;
+.e-onboarding-page {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  padding: 1rem;
+  box-sizing: border-box;
+
+  &__content {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	flex: 1;
+  }
+
+  &__image {
+	flex: 1;
+	background-color: gray;
+  }
+}
+
+
+.e-onboarding-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 0 3rem;
+  background: #FFFFFF;
+  box-shadow: 0px 3px 16px rgba(35, 38, 42, 0.2);
+  box-sizing: border-box;
+
+  &__progress-bar {
+	width: 100%;
+	min-height: 50px;
+	background-color: gray;
+  }
+
+  &__content {
+	box-sizing: border-box;
+	height: 100%;
+	margin-bottom: 50px;
+  }
 }
