--- a/modules/onboarding/assets/scss/onborading.scss
+++ b/modules/onboarding/assets/scss/onborading.scss
@@ -43,8 +43,14 @@
   }
 
   &__content {
+	display: flex;
+	flex-direction: column;
 	box-sizing: border-box;
 	height: 100%;
 	margin-bottom: 50px;
+
+	&-next-button {
+	  width: 50%;
+	}
   }
 }
