--- a/modules/onboarding/assets/scss/onborading.scss
+++ b/modules/onboarding/assets/scss/onborading.scss
@@ -25,6 +25,30 @@
   }
 }
 
+.circle {
+  background-color: lightblue;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+}
+
+.smallCircle {
+  background-color: lightblue;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+}
+
+.selected {
+  background-color: red;
+}
+
+.e-onboarding-progress-bar {
+  display: flex;
+  width: 100%;
+  min-height: 50px;
+  background-color: gray;
+}
 
 .e-onboarding-container {
   flex: 1;
@@ -33,14 +57,8 @@
   height: 100%;
   margin: 0 3rem;
   background: #FFFFFF;
-  box-shadow: 0px 3px 16px rgba(35, 38, 42, 0.2);
+  box-shadow: 0 3px 16px rgba(35, 38, 42, 0.2);
   box-sizing: border-box;
-
-  &__progress-bar {
-	width: 100%;
-	min-height: 50px;
-	background-color: gray;
-  }
 
   &__content {
 	display: flex;
